# zlicenser-server

./: .editorconfig  .gitignore  Cargo.toml  NOTICE  README.md  deny.toml  deploy.sh  test_ci.sh
.github/workflows/: ci.yml
apps/zlicenser-server-bin/: Cargo.toml
apps/zlicenser-server-bin/dashboard/: package-lock.json  package.json
apps/zlicenser-server-bin/dashboard/src/routes/: +page.svelte
apps/zlicenser-server-bin/src/: main.rs
bindings/go/: Cargo.toml  cbindgen.toml  go.mod  zlicenser_server.go  zlicenser_server.h  zlicenser_server_test.go
bindings/go/src/: lib.rs
bindings/nodejs/: Cargo.toml  index.js  package-lock.json  package.json
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/zlicenser_server/: __init__.py
crates/zlicenser-server/: Cargo.toml
crates/zlicenser-server/src/: lib.rs
crates/zlicenser-server/src/core/: mod.rs
crates/zlicenser-server/src/issuance/: mod.rs
crates/zlicenser-server/src/payment/: mod.rs
crates/zlicenser-server/src/storage/: mod.rs
docs/: book.toml
docs/src/: SUMMARY.md
src/: lib.rs
xtask/src/: main.rs
