[workspace]
members = [
    "crates/zlicenser-server",
    "apps/zlicenser-server-bin",
    "bindings/python",
    "bindings/nodejs",
    "bindings/go",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
zlicenser-protocol = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
zlicenser-protocol = { path = "../zlicenser-protocol" }
