[package]
name = "zlicenser-server-bin"
version = "0.1.0"
edition = "2021"
authors = ["ZAL Analytics <arsalan@anwari.nl>"]
publish = false

[[bin]]
name = "zlicenser-server"
path = "src/main.rs"

[dependencies]
zlicenser-server = { path = "../../crates/zlicenser-server" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { version = "4", features = ["derive"] }
rust-embed = "8"
