[package]
name = "zlicenser-server"
version = "0.1.0"
edition = "2021"
authors = ["ZAL Analytics <arsalan@anwari.nl>"]
description = "Server library for the zlicenser hardware-bound software licensing framework."
documentation = "https://docs.rs/zlicenser-server"
repository = "https://github.com/zal-analytics/zlicenser-server"
license = "Apache-2.0"
keywords = ["licensing", "hardware-fingerprint", "server", "drm", "zlicenser"]
categories = ["cryptography", "authentication"]
readme = "../../README.md"
publish = true

[features]
default = ["storage-sqlite", "http-server"]
http-server = ["dep:axum", "dep:tower", "dep:tower-http"]
storage-sqlite = ["dep:sqlx", "sqlx?/sqlite"]
storage-postgres = ["dep:sqlx", "sqlx?/postgres"]
payment-stripe = ["dep:async-stripe"]

[dependencies]
zlicenser-protocol = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

figment = { version = "0.10", features = ["toml"] }

axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace", "cors"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls"], default-features = false, optional = true }
async-stripe = { version = "0.38", features = ["runtime-tokio-hyper-rustls"], optional = true }

[dev-dependencies]
insta = "1"
proptest = "1"
mockall = "0.13"
